<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".loginRegister.Sign_Up">

    <TextView
        android:id="@+id/textView"
        android:layout_width="348dp"
        android:layout_height="67dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="Buat Akun"
        android:textColor="#A4B8C4"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="150dp"
        android:id="@+id/img_btn"
        android:layout_height="150dp"
        android:background="@drawable/img_rounded"
        android:textColor="#19535F"
        android:text="pilih foto"
        app:layout_constraintBottom_toBottomOf="@+id/avt"
        app:layout_constraintEnd_toEndOf="@+id/avt"
        app:layout_constraintStart_toStartOf="@+id/avt"
        app:layout_constraintTop_toTopOf="@+id/avt" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avt"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="110dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#8cd8d1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edt_rounded"
        android:ems="10"
        android:hint="@string/nama"
        android:inputType="textPersonName"
        android:paddingStart="45dp"
        android:paddingRight="15dp"
        android:text=""
        android:textColor="#19535F"
        android:textColorHint="#19535F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avt" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:textColor="#19535F"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edt_rounded"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="45dp"
        android:paddingRight="15dp"
        android:textColorHint="#19535F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />

    <EditText
        android:id="@+id/edtNomor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edt_rounded"
        android:ems="10"
        android:hint="@string/nomor"
        android:inputType="phone"
        android:paddingLeft="45dp"
        android:textColor="#19535F"
        android:paddingRight="15dp"
        android:textColorHint="#19535F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <EditText
        android:id="@+id/edtPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edt_rounded"
        android:textColor="#19535F"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="45dp"
        android:paddingRight="15dp"
        android:textColorHint="#19535F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNomor" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_user"
        android:text="Buat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPass"
        app:layout_constraintVertical_bias="0.494" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/edtName"
        app:layout_constraintStart_toStartOf="@+id/edtName"
        app:layout_constraintTop_toTopOf="@+id/edtName"
        app:srcCompat="@drawable/register_users" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/edtNomor"
        app:layout_constraintStart_toStartOf="@+id/edtNomor"
        app:layout_constraintTop_toTopOf="@+id/edtNomor"
        app:srcCompat="@drawable/register_telp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/edtPass"
        app:layout_constraintStart_toStartOf="@+id/edtPass"
        app:layout_constraintTop_toTopOf="@+id/edtPass"
        app:srcCompat="@drawable/register_pass" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/edtEmail"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toTopOf="@+id/edtEmail"
        app:srcCompat="@drawable/register_email" />
</androidx.constraintlayout.widget.ConstraintLayout>